--- a/pages/apps/excel/python.mdx
+++ b/pages/apps/excel/python.mdx
@@ -26,7 +26,7 @@ Run Python code as a function to power your formulas and LAMBDA functions, which
 =LAMBDA(x, BOARDFLARE.RUNPY("arg1 + 2", x))
 =MYFUNC(5) = 7
 ```
-This enables you to build custom functions using Python without building a custom Excel add-in.  This add-in was originally conceived as an internal tool for prototyping custom functions based on Python without the overhead of building a full add-in.  We realized that others could benefit from the same capability, so we decided to release it as a free add-in on the Microsoft AppSource store.
+This enables you to build custom functions using Python without building a custom Excel add-in.  This was originally conceived as an internal tool for prototyping custom functions based on Python.  We realized that others could benefit from the same capability, so we decided to publish it as a free add-in.
 
 ## Benefits
 
@@ -43,55 +43,86 @@ This is a minimalist tool which is not designed to compete with the native [Pyth
 
 ## Python Runtime
 
-[Pyodide](https://pyodide.org/en/stable/index.html) is the Python runtime, which is based on [WebAssembly](https://webassembly.org/) running in the browser used by Excel desktop and web to host add-ins.  This is currently running Python 3.12, but has limitations as discussed in the [Pyodide documentation](https://pyodide.org/en/stable/usage/wasm-constraints.html).
+[Pyodide](https://pyodide.org/en/stable/index.html) is the Python runtime used by the add-in, which is based on [WebAssembly](https://webassembly.org/) running in the browser used by Excel desktop and web to host add-ins.  This is currently running Python 3.12, but has limitations as discussed in the [Pyodide documentation](https://pyodide.org/en/stable/usage/wasm-constraints.html).
 
-Any output to `stdout` or `stderr` is displayed in the Console area of the add-in task pane. This is useful for debugging your code, and also for displaying intermediate results of long-running operations such as functions that are processing large input arrays
-
-### Import Packages
+### Packages
 
 Pyodide includes a number of [built-in packages](https://pyodide.org/en/stable/usage/packages-in-pyodide.html). You can import any of these packages as well as those from the Python standard library. Any imports for external Python packages will be loaded from [PyPI](https://pypi.org/), but only if they are pure Python, which means there is a Python wheel that ends with `-py3-none-any.whl`, e.g. `beautifulsoup4-4.12.3-py3-none-any.whl`.  Packages tagged as [OS-independent](https://pypi.org/search/?q=&o=&c=Operating+System+%3A%3A+OS+Independent) on PyPI should work, but double-check the wheel.
 
 You do not need to install packages, just import them in your code.  Your code will be scanned for imports and any found will be handled for you using `micropip` in the background and the package will be downloaded if needed from PyPI.  If you try to import an external package (not part of the Python standard library or one of the built-in packages) for which there is not a pure Python wheel available on PyPI, an error will be thrown.
 
-### Remote Code
+### Network Access
 
-If a URL starting with `https://` is provided for the code string, it will be fetched and the text contents used as the code.  Excel add-ins run in a browser instance, even for desktop apps, so be aware of the following restrictions when loading code from a URL:
+Network access is available to the Pyodide runtime via JavaScript. There are several options available using this.
+1. Directly using [pyfetch](https://pyodide.org/en/stable/usage/api/python-api/http.html#pyodide.http.pyfetch) - This is a Python wrapper around the Fetch API provided by Pyodide. This can be used to make HTTP requests to APIs.
 
-- `http://` links will not work due to browser security restrictions.
-- The server must respond with a CORS header to allow the request.  This is the case for GitHub Gists and raw links to files in public GitHub repos.  Note that GitHub Gist raw links change each time you edit the file and create a new version.
+```python
+  from pyodide.http import pyfetch
+  response = await pyfetch("https://some_url/myfiles.zip")
+  await response.unpack_archive()
+```
+2. Patching http libraries with [pyodide-http](https://github.com/koenvo/pyodide-http) - This patches http libraries such as `requests` so that they use JavaScript for network access.
 
-Public links to files in OneDrive or SharePoint will not work due to lack of CORS headers, but we plan to add a feature to enable users to share and load code from OneDrive or SharePoint, similar to how [Office Scripts](https://learn.microsoft.com/en-us/office/dev/scripts/overview/excel) currently work.
+```python
+  # Patch requests to use JavaScript for network access.
+  import pyodide_http
+  pyodide_http.patch_all()
+
+  import requests
+  response = requests.get("https://some_url/myfiles.zip")
+```
+
+### Security
+
+The Pyodide runtime runs in a [Web Worker](https://developer.mozilla.org/en-US/docs/Web/API/Web_Workers_API), which is a separate thread from the main Excel add-in thread, and does not, as far as we know, have direct access to any Excel APIs or your workbook other than the data you pass to it as arg1, arg2, etc.  However, hackers are creative and tend to find security loopholes, so just like with VBA, you should never run code from an untrusted source.
 
 ## RUNPY Function
 
 The `RUNPY` function executes Python code and returns the result.  Optional positional arguments `arg1, arg2, ...` (similar to Python *args) are set as globals to pass as arguments of your Python function.
 
 ```excel
-=BOARDFLARE.RUNPY(code, [arg1])
+=BOARDFLARE.RUNPY(code, [arg1],[arg2],...)
 ```
 
-For example, if the following Python code is stored in cell `A1`:
+```excel
+=BOARDFLARE.RUNPY("2 + arg1", 3)
+=5
+```
+
+### Code
+
+`code` must be a string containing Python code, which can be a simple expression or a block of code.  `code` can also be a URL, e.g. `https://gist.github.com...code.py`, which must return code in plain text.  Note that the URL must be `https` and return an `Access-Control-Allow-Origin` [CORS](https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS) header.
+
+Your Python code can import any of the built-in packages in Pyodide, as well as any pure Python package from PyPI, as per the [Python Packages](#python-packages) section above.
+
+The value of the last expression in your Python code is returned, similar to a Jupyter notebook cell, or Excel `PY`.  A good practice is to wrap your code in a function, and then call that function on the last line.  For example, the following code returns the sum of the arguments:
 
 ```python
 def add(a, b):
   return a + b
+
 add(arg1,arg2)
 ```
+Or, the same thing using numpy would be as follows:
 
-You can run this code and pass the arguments `arg1 = 2`, `arg2 = 3` as follows:
+```python
+import numpy as np
 
-```excel
-=BOARDFLARE.RUNPY(A1,2,3)
+def add(a, b):
+    return np.add(a, b).item()
+
+result = add(arg1, arg2)
 ```
+Note that the last expression must return one of [these types](#return-types): int, float, str, bool, or list.
 
-See our [examples](#examples) section below for more.
+Any output to `stdout` or `stderr` is displayed in the Console area of the add-in task pane, but it is only returned at the completion of the execution of your code, so you can't use use `print` statements to view progress of long-running operations.
 
 ### Arguments
 
 | Argument | Type            | Optional | Description                                                                |
 |----------|-----------------|----------|----------------------------------------------------------------------------|
-| code     | string          | No       | Python code text, or URL to code, e.g. `https://gist.github....code.py`.  |
-| arg1     | scalar or array | Yes      | Repeating argument that sets globals `arg1, arg2, ..` to pass in data.                             |
+| code     | string          | No       | Python code text, or URL as per [above](#code).  |
+| arg1     | scalar or array | Yes      | Repeating argument that sets global variables `arg1, arg2, ..` which you can then use in your code to pass in data.                             |
 
 The table below shows how argument values for `arg1, arg2, ..` are converted from Excel to Python types:
 
@@ -112,18 +143,9 @@ The table below shows how argument values for `arg1, arg2, ..` are converted fro
 - Skipping an arg with a comma, sets that arg to None. e.g. `=BOARDFLARE.RUNPY("some code",,3)` sets `arg1 = None` and `arg2 = 3`.
 - Unset optional args in a LAMBDA also become `None`. e.g. `=LAMBDA([x], BOARDFLARE.RUNPY("3 + arg1", x))()` will set `arg1 = None` and throw an error in this example because `None` is not a valid Python type for the `+` operator, so you would need to handle this case in your Python code.
 
-### Return Values
+### Returns
 
-The value of the last expression in your Python code is returned by the `BOARDFLARE.RUNPY` function, similar to a Jupyter notebook cell, or Excel's `PY`.  A good practice is to wrap your code in a function, and then call that function on the last line.  For example, the following code returns the sum of the arguments:
-
-```python
-def add(a, b):
-  return a + b
-
-add(arg1,arg2)
-```
-
-The last expression must return a Python type in the table below, which will be converted to the corresponding Excel type.
+The last expression will be converted to the corresponding Excel type as follows:
 
 | Python Type             | Example            | Excel Type |
 |-------------------------|--------------------|------------|
@@ -135,36 +157,7 @@ The last expression must return a Python type in the table below, which will be 
 | 2D list (Column Vector) | [[1], [2], [3]]    | Array      |
 | 2D list (Row Vector)    | [[1, 2, 3]]        | Array      |
 
-If the last expression returns another Python type such as Numpy array, Pandas DataFrame, dict, tuple, etc., it will throw an error.  If you need to return a more complex data structure for use in another function, you can convert it to a JSON string using `json.dumps`.
-
-### Excel PY Compatibility
-
-`RUNPY` takes arguments like a regular Excel function which enables you to use it Excel formulas, whereas Excel's `PY` is more of an interactive environment which enables you to reference Excel cells directly.  Each approach is useful for different use-cases, so it would be convenient to be able to use the same code in either.
-
-To help achieve this, `RUNPY` also does the following:
-- converts Excel arrays to pandas DataFrames without headers
-- returns the value of the last expression in the code.  
-
-If imported packages are available in both environments, the same code should work in both, with the only difference being how the arguments are passed to the Python function, as shown in the highlighted lines below.
-
-```python {5}
-# Using BOARDFLARE.RUNPY
-def add(a, b):
-  return a + b
-
-add(arg1,arg2)
-```
-
-
-```python {5}
-# Using Excel's PY
-def add(a, b):
-  return a + b
-
-add(xl("A2"),xl("B2"))
-```
-
-While maybe not our preferred development tool, the Excel `PY` can be a handy way for writing quick code snippets with syntax highlighting before moving code to `RUNPY` for use in Excel formulas.
+If the last expression returns another Python type such as numpy array, pandas DataFrame, dict, tuple, etc., it will throw an error.  If you need to return a more complex data structure, you can convert it to a JSON string first.
 
 ## Examples
 
@@ -206,11 +199,9 @@ def extract_email(text):
 extract_email(arg1)
 ```
 
-See this [workbook](https://whistlernetworks.sharepoint.com/:x:/s/Boardflare/Eb_nCI4mR6tImGx_S1hPVs8B4UYmrJRrkk0_Grai6A4adg?e=xfUuNQ) for demos of fuzzy matching functions and showing their use relative to Excel's native `PY` feature.
-
 ## Errors
 
-Here are some common Excel cell errors you may encounter:
+Here are some Excel errors you may encounter:
 
 - `#VALUE!`:  An argument to a function is missing or it is the wrong type (e.g. incorrect range reference).
 - `#NAME?`:  The function name is spelled incorrectly, e.g. `BOARDFLARE.RUNPYY`.
@@ -223,6 +214,38 @@ To the left of the bottom of the task pane, you may also see additional errors s
 
 Unfortunately, the custom function capability of Excel can be a bit buggy and will throw various errors when the custom function is not being properly initialized by Excel.  If you think this is the case, try restarting Excel, or reloading the browser window.
 
+## FAQ
+
+<details>
+  <summary>Can I link to code in OneDrive or SharePoint?</summary>
+  No.  Public links to files in OneDrive or SharePoint will not work due to lack of CORS headers, but we plan to add a feature to enable users to share and load code from OneDrive or SharePoint, similar to how [Office Scripts](https://learn.microsoft.com/en-us/office/dev/scripts/overview/excel) currently work.
+</details>
+
+<details>
+  <summary>Can I use a GitHub Gist or raw link to a file in a public GitHub repo?</summary>
+  Yes. Both apply CORS. Note that GitHub Gist raw links change each time you edit the file and create a new version.
+</details>
+
+<details>
+  <summary>Can I use a URL to a file in a private GitHub repo?</summary>
+  No.  The URL must be public and accessible without authentication.
+</details>
+
+<details>
+  <summary>Is the code compatible with the native Excel PY function?</summary>
+  Yes.  Just define the global variables `arg1, arg2,...` at the top as shown in the highlighted lines below.  `RUNPY` converts Excel arrays to pandas DataFrames without headers the same as Excel PY does.
+
+  ```python {1-2}
+arg1 = xl("A2")
+arg2 = xl("B2")
+
+def add(a, b):
+  return a + b
+
+add(arg1,arg2)
+```
+</details>
+
 ## Use Cases
 
 Some key use-cases we see are as follows:
@@ -234,6 +257,9 @@ Some key use-cases we see are as follows:
 3. **Accessing APIs**:  e.g. using LLM from OpenAI, loading or pushing data where Power Query is not suitable, etc.
 
 ## Changelog
+
+1.0.6 - 2024-10-28
+- No longer throws error if you pass None as an argument to `RUNPY`, so you need to handle this in your code (e.g. if you pass an empty cell). See [Arguments](#arguments) for more details.
 
 1.0.5 - 2024-10-22
 - `RUNPY` is a new function which handles both arrays and scalars similar to the Excel's `PY`.
