--- a/pages/functions/[[...slug]].mdx
+++ b/pages/functions/[[...slug]].mdx
@@ -1,37 +1,66 @@
 import { Callout, RemoteContent } from 'nextra/components'
 import { buildDynamicMDX, buildDynamicMeta } from 'nextra/remote'
 
-export const filePaths = ['text/sentiment/azureai_sentiment']
+export const getBaseUrl = () => {
+  return process.env.NODE_ENV === 'development'
+    ? 'https://localhost:4000'
+    : 'https://addins.boardflare.com/functions/prod'
+}
 
 export async function getStaticProps({ params }) {
+  const baseUrl = getBaseUrl()
   const path = params.slug?.join('/')
-  const url = `https://addins.boardflare.com/functions/prod/notebooks/${path}.ipynb`
-  const response = await fetch(url)
-  const notebook = await response.json()
+  const notebookUrl = `${baseUrl}/notebooks/${path}.ipynb`
 
-  // Extract markdown data from the first cell
-  const firstMarkdownCell = notebook.cells.find(
-    (cell) => cell.cell_type === 'markdown'
-  )
-  const markdownData = firstMarkdownCell ? firstMarkdownCell.source.join('') : ''
+  try {
+    const response = await fetch(notebookUrl)
+    const notebook = await response.json()
 
-  //const { __nextra_pageMap } = await buildDynamicMeta()
-  const dynamicMdx = await buildDynamicMDX(markdownData, {
-    defaultShowCopyCode: true,
-  })
-  return {
-    props: {
-      //__nextra_pageMap,
-      ...dynamicMdx,
-    },
+    console.log('notebook:', notebook)
+    const firstMarkdownCell = notebook.cells.find(
+      cell => cell.cell_type === 'markdown'
+    )
+    const markdownData = firstMarkdownCell ? firstMarkdownCell.source.join('') : ''
+
+    const { __nextra_pageMap } = await buildDynamicMeta()
+    const dynamicMdx = await buildDynamicMDX(markdownData, {
+      defaultShowCopyCode: true,
+    })
+
+    return {
+      props: {
+        __nextra_pageMap,
+        ...dynamicMdx,
+      },
+    }
+  } catch (error) {
+    console.error('Error fetching notebook:', error)
+    return {
+      props: {
+        mdxSource: '',
+        frontMatter: {}
+      }
+    }
   }
 }
 
-export const getStaticPaths = () => ({
-  fallback: false,
-  paths: filePaths.map((filePath) => ({
-    params: { slug: filePath.split('/') },
-  })),
-})
+export async function getStaticPaths() {
+  const baseUrl = getBaseUrl()
+  try {
+    const response = await fetch(`${baseUrl}/website/filepaths.json`)
+    const filePaths = await response.json()
+    return {
+      fallback: false,
+      paths: filePaths.map(filePath => ({
+        params: { slug: filePath.split('/') },
+      })),
+    }
+  } catch (error) {
+    console.error('Error in getStaticPaths:', error)
+    return { fallback: false, paths: [] }
+  }
+}
 
-<RemoteContent components={{ Callout }} />
+export default function Page({ children }) {
+  return <RemoteContent components={{ Callout }}>{children}</RemoteContent>
+}
