add azure sentiment analysis post, revise blog titles

--- a/pages/blog/2024/align-with-python-excel.mdx
+++ b/pages/blog/2024/align-with-python-excel.mdx
@@ -1,9 +1,9 @@
 ---
-title: Functions and aligning with Python in Excel
+title: Python in Excel Functions
 date: 2024-10-22
 ---
 
-# Functions and aligning with Python in Excel
+# Python in Excel Functions
 October 22, 2024
 
 ## Overview
