add link to docs for azure_sentiment

--- a/pages/blog/2024/azure-sentiment-analysis.mdx
+++ b/pages/blog/2024/azure-sentiment-analysis.mdx
@@ -125,8 +125,9 @@ To run this function from Excel we need to use the `BOARDFLARE.RUNPY` function w
 ```excel
 =BOARDFLARE.RUNPY("text/sentiment-analysis/azure_sentiment.ipynb", A1:A10, "your-azure-key", "your-azure-endpoint")
 ```
+The documentation for the `azure_sentiment` function is available [here](/functions/text/sentiment-analysis/azure_sentiment).
 
-The workbook which implements this is available here: [Azure Sentiment Analysis in Excel](https://whistlernetworks.sharepoint.com/:x:/s/Boardflare/EfVwGShk-o5Bq3j47GYdc6oBIZfk0lTXNHvDbQCjqVD9FA?e=lOceuX)
+The workbook which implements this is available here: [Azure Sentiment Analysis in Excel](https://whistlernetworks.sharepoint.com/:x:/s/Boardflare/EfVwGShk-o5Bq3j47GYdc6oBIZfk0lTXNHvDbQCjqVD9FA?e=lOceuX) which also has a link to the source code.
 
 ## Results
 
