fix functions link in gradio, add video to python, fuzzy blog post

--- a/pages/apps/excel/python.mdx
+++ b/pages/apps/excel/python.mdx
@@ -88,6 +88,8 @@ The `RUNPY` function executes Python code and returns the result.  Optional posi
 =5
 ```
 
+Here is a [brief video](https://youtu.be/ngxM7VRkkgk) showing how to use the `RUNPY` function.
+
 ### Code
 
 `code` must be a string containing Python code, which can be a simple expression or a block of code.  `code` can also be a URL, e.g. `https://gist.github.com...code.py`, which must return code in plain text.  Note that the URL must be `https` and return an `Access-Control-Allow-Origin` [CORS](https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS) header.
