add schema.org to home page to fix heading in SERP

--- a/pages/apps/excel/python.mdx
+++ b/pages/apps/excel/python.mdx
@@ -252,7 +252,7 @@ Some key use-cases we see are as follows:
 
 1. **Python-powered LAMBDAs**: `RUNPY` allows Python to be used inside LAMBDA functions enabling them to be as powerful as custom functions which previously required building an Excel add-in.
 
-2. **Local Processing**: Often local processing is preferred for privacy, peformance, or cost reasons.
+2. **Local Processing**: Often local processing is preferred for privacy, performance, or cost reasons.
 
 3. **Accessing APIs**:  e.g. using LLM from OpenAI, loading or pushing data where Power Query is not suitable, etc.
 
