--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,16 +6,17 @@ import Link from 'next/link'
 import Head from 'next/head'
 
 <Head>
-  <script type="application/ld+json">
-    {`
-      {
+  <script
+    type="application/ld+json"
+    dangerouslySetInnerHTML={{
+      __html: JSON.stringify({
         "@context": "http://schema.org",
         "@type": "WebSite",
         "name": "Boardflare",
         "url": "https://www.boardflare.com"
-      }
-    `}
-  </script>
+      })
+    }}
+  />
 </Head>
 
 <div>
